# iism

./: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  supervisord.conf
iism/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
iism/static/css/: styles.css
iism/templates/: index.html  layout.html
lab1/: forms.py  models.py  urls.py  validators.py  views.py
lab1/migrations/: 0001_initial.py
lab1/services/: assignment_manager.py  event_simulator.py  task_view_processor.py  tournament_simulator.py
lab1/templates/lab1/: index.html
lab2/: forms.py  urls.py  views.py
lab2/services/: base_simulator.py  continuous_variable_simulator.py  discrete_variable_simulator.py  statistical_analysis.py
lab2/templates/lab2/: index.html
lab3/: forms.py  urls.py  views.py
lab3/services/: base_bivariate_simulator.py  bivariate_statistical_analysis.py  continuous_bivariate_simulator.py  discrete_bivariate_simulator.py
lab3/templates/lab3/: index.html
lab3/templatetags/: lab3_extras.py
lab4/: forms.py  urls.py  views.py
lab4/services/: balance_equations_solver.py  base_queue_model.py  performance_metrics.py  priority_queue_model.py  priority_queue_simulator.py  smo_service.py
lab4/templates/lab4/: index.html
lab5/: forms.py  urls.py  views.py
lab5/services/: analyzer.py  graph_builder.py  marking.py  petri_net.py  renderer.py  simulator.py  types.py
lab5/templates/lab5/: index.html
lab5/templatetags/: lab5_extras.py
